[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "paperless-python-sdk"
version = "1.1.0"
description = "Paperless Parts Python SDK"
readme = "README.md"
license = {text = "LGPL-3.0"}
authors = [
    {name = "Paperless Parts Engineering", email = "dev@paperlessparts.com"}
]
maintainers = [
    {name = "Paperless Parts Engineering", email = "dev@paperlessparts.com"}
]
keywords = ["paperless", "parts", "sdk", "api"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.9.0"
dependencies = [
    "attrs==25.3.0",
    "factory_boy==3.3.3",
    "Faker==37.12.0",
    "requests==2.32.5",
    "python-dateutil==2.9.0.post0",
]

[project.urls]
Homepage = "https://github.com/paperlessPARTS/core-python"
Repository = "https://github.com/paperlessPARTS/core-python"
Issues = "https://github.com/paperlessPARTS/core-python/issues"

[project.optional-dependencies]
dev = [
    "coverage==7.10.6",
    "pre-commit==4.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["paperless"]
sources = {"paperless" = "paperless"}
exclude = ["tests", "tests/*", "*.tests", "*.tests.*"]
